@@ -393,6 +393,10 @@ servers.each do |server|
         class { 'useradd::sysconfig_init':
           bootup            => 'verbose',
           res_col           => 75,
+          setcolor_success  => 'cyan',
+          setcolor_failure  => 'magenta',
+          setcolor_warning  => 'blue',
+          setcolor_normal   => 'red',
           single_user_login => '/sbin/sulogin_test',
           loglvl            => 7,
           prompt            => true,
@@ -448,7 +452,7 @@ servers.each do |server|
 
       it 'should edit /etc/sysconfig/init' do
         on(server, 'cat /etc/sysconfig/init').output.strip
-        expect(stdout).to include('BOOTUP=verbose', 'RES_COL=75', 'MOVE_TO_COL="echo -en \\\\033[${RES_COL}G"', 'SINGLE=/sbin/sulogin_test', 'LOGLEVEL=7', 'PROMPT=yes', 'AUTOSWAP=yes')
+        expect(stdout).to include('BOOTUP=verbose', 'RES_COL=75', 'MOVE_TO_COL="echo -en \\\\033[${RES_COL}G"', 'SETCOLOR_SUCCESS="echo -en \\\\033[0;36m"', 'SETCOLOR_FAILURE="echo -en \\\\033[0;35m"', 'SETCOLOR_WARNING="echo -en \\\\033[0;34m"', 'SETCOLOR_NORMAL="echo -en \\\\033[0;31m"', 'SINGLE=/sbin/sulogin_test', 'LOGLEVEL=7', 'PROMPT=yes', 'AUTOSWAP=yes')
       end
     end
   end
