@@ -1,3 +1,8 @@
+* Wed Jun 14 2017 Brandon Riden <brandon.riden@onyxpoint.com - 0.2.0
+- Allow users to specify colors as strings instead of ansi codes in sysconfig/init
+- Updated sysconfig_init.pp to reflect these changes as well as add notes
+- Updated template to convert color strings to ansi code
+
 * Wed Jun 14 2017 Brandon Riden <brandon.riden@onyxpoint.com> - 0.2.0
 - Fix bug in libuser.conf where userBranch was referencing groupbranch variable
 - Added/fixed author on all manifests
